; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_dpt_i2o.c_adpt_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_dpt_i2o.c_adpt_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, %struct.TYPE_3__* }
%struct.inode = type { i32 }
%struct.file = type { i32 }

@hba_count = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4
@adpt_configuration_lock = common dso_local global i32 0, align 4
@hba_chain = common dso_local global %struct.TYPE_3__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @adpt_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adpt_open(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  %8 = call i32 (...) @lock_kernel()
  %9 = load %struct.inode*, %struct.inode** %4, align 8
  %10 = call i32 @iminor(%struct.inode* %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @hba_count, align 4
  %13 = icmp sge i32 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = call i32 (...) @unlock_kernel()
  %16 = load i32, i32* @ENXIO, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %3, align 4
  br label %49

18:                                               ; preds = %2
  %19 = call i32 @mutex_lock(i32* @adpt_configuration_lock)
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** @hba_chain, align 8
  store %struct.TYPE_3__* %20, %struct.TYPE_3__** %7, align 8
  br label %21

21:                                               ; preds = %32, %18
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %23 = icmp ne %struct.TYPE_3__* %22, null
  br i1 %23, label %24, label %36

24:                                               ; preds = %21
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = load i32, i32* %6, align 4
  %29 = icmp eq i32 %27, %28
  br i1 %29, label %30, label %31

30:                                               ; preds = %24
  br label %36

31:                                               ; preds = %24
  br label %32

32:                                               ; preds = %31
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 2
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %34, align 8
  store %struct.TYPE_3__* %35, %struct.TYPE_3__** %7, align 8
  br label %21

36:                                               ; preds = %30, %21
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %38 = icmp eq %struct.TYPE_3__* %37, null
  br i1 %38, label %39, label %44

39:                                               ; preds = %36
  %40 = call i32 @mutex_unlock(i32* @adpt_configuration_lock)
  %41 = call i32 (...) @unlock_kernel()
  %42 = load i32, i32* @ENXIO, align 4
  %43 = sub nsw i32 0, %42
  store i32 %43, i32* %3, align 4
  br label %49

44:                                               ; preds = %36
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 1
  store i32 1, i32* %46, align 4
  %47 = call i32 @mutex_unlock(i32* @adpt_configuration_lock)
  %48 = call i32 (...) @unlock_kernel()
  store i32 0, i32* %3, align 4
  br label %49

49:                                               ; preds = %44, %39, %14
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local i32 @lock_kernel(...) #1

declare dso_local i32 @iminor(%struct.inode*) #1

declare dso_local i32 @unlock_kernel(...) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
